--- a/index.html
+++ b/index.html
@@ -5,17 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.0/animate.min.css">
     <link rel="stylesheet" href="css/vars.css">
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/style.css">
+
     <title>Display art</title>
 </head>
 <body>
     <div class="main">
         <div class="content">
-            <button class="btn bg-btn bg-margin-bottom">
-                просмотр
-            </button>
+            <a id="demo01" href="#animatedModal">
+                <button class="btn bg-btn margin-bottom">
+                    просмотр
+                </button>
+            </a>
+            
             <div class="main__langs">
                 <button class="btn sm-btn active">
                     ru
@@ -30,8 +35,40 @@
         </div>
     </div>
 
-    <div class="sections">
-        <div class="sections__langs">
+    <div class="sections" id="animatedModal">
+        <div class="modal-content">
+            <div class="langs-right">
+                <button class="btn sm-btn active margin-right">
+                    ru
+                </button>
+                <button class="btn sm-btn margin-right">
+                    tat
+                </button>
+                <button class="btn sm-btn margin-right">
+                    eng
+                </button>
+            </div>
+    
+            <div class="sections__btns margin-top">
+                <div class="sections__wrap">
+                    <button class="btn bg-btn margin-bottom">
+                        раздел 1
+                    </button>
+                    <button class="btn bg-btn margin-bottom">
+                        раздел 2
+                    </button>
+                </div>
+                <div class="sections__wrap">
+                    <button class="btn bg-btn margin-bottom">
+                        раздел 3
+                    </button>
+                    <button class="btn bg-btn margin-bottom">
+                        раздел 4
+                    </button>
+                </div>
+            </div>
+        </div>
+  <!--       <div class="langs-right">
             <button class="btn sm-btn active margin-right">
                 ru
             </button>
@@ -43,24 +80,66 @@
             </button>
         </div>
 
-        <div class="sections__btns">
+        <div class="sections__btns margin-top">
             <div class="sections__wrap">
-                <button class="btn bg-btn bg-margin-bottom">
+                <button class="btn bg-btn margin-bottom">
                     раздел 1
                 </button>
-                <button class="btn bg-btn bg-margin-bottom">
+                <button class="btn bg-btn margin-bottom">
                     раздел 2
                 </button>
             </div>
             <div class="sections__wrap">
-                <button class="btn bg-btn bg-margin-bottom">
+                <button class="btn bg-btn margin-bottom">
                     раздел 3
                 </button>
-                <button class="btn bg-btn bg-margin-bottom">
+                <button class="btn bg-btn margin-bottom">
                     раздел 4
                 </button>
             </div>
-        </div>
+        </div> -->
     </div>
+
+    <div class="section-1">
+        <div class="btns-wrap">
+            <div class="section-btn-wrap">
+                <button class="section-btn btn bg-btn">
+                    назад
+                </button>
+            </div>
+            <div class="langs-right">
+                <button class="btn sm-btn active margin-right">
+                    ru
+                </button>
+                <button class="btn sm-btn margin-right">
+                    tat
+                </button>
+                <button class="btn sm-btn margin-right">
+                    eng
+                </button>
+            </div>
+        </div>
+
+        <div class="section-1__content margin-top margin-bottom">
+            <div class="section-1__text">
+                <h3 class="heading">Раздел 1</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+            <div class="section-1__gallery">
+                <img src="img/gallery1/img1.jpg" alt="Image 1">
+                <img src="img/gallery1/img2.jpg" alt="Image 2">
+                <img src="img/gallery1/img3.jpg" alt="Image 3">
+                <img src="img/gallery1/img4.jpg" alt="Image 4">
+                <img src="img/gallery1/img5.jpg" alt="Image 5">
+                <img src="img/gallery1/img6.jpg" alt="Image 6">
+            </div>
+        </div>
+
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="yourPath/animatedModal.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
