Add animation for sections

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <link rel="stylesheet" href="libs/animatedModal/css/normalize.min.css">
     <link rel="stylesheet" href="libs/animatedModal/css/animate.min.css">
     <link rel="stylesheet" href="libs/baguetteBox/baguetteBox.min.css">
@@ -59,7 +60,7 @@
             <div class="sections__btns margin-top">
                 <div class="sections__wrap">
                     <a id="section1" href="#animatedSection1">
-                        <button class="btn bg-btn margin-bottom">
+                        <button class="btn bg-btn margin-bottom margin-right">
                             раздел 1
                         </button>
                     </a>
@@ -71,7 +72,7 @@
                 </div>
                 <div class="sections__wrap">
                     <a id="section3" href="#animatedSection3">
-                        <button class="btn bg-btn margin-bottom">
+                        <button class="btn bg-btn margin-bottom margin-right">
                             раздел 3
                         </button>
                     </a>
