Add .active and prefixers

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     </a>
                     
                     <div class="main__langs">
-                        <button class="btn sm-btn margin-right">
+                        <button class="btn sm-btn margin-right active">
                             ru
                         </button>
                         <button class="btn sm-btn margin-right">
@@ -50,7 +50,7 @@
                         <button class="btn sm-btn margin-right">
                             ru
                         </button>
-                        <button class="btn sm-btn margin-right">
+                        <button class="btn sm-btn margin-right active">
                             tat
                         </button>
                         <button class="btn sm-btn">
@@ -75,7 +75,7 @@
                         <button class="btn sm-btn margin-right">
                             tat
                         </button>
-                        <button class="btn sm-btn">
+                        <button class="btn sm-btn active">
                             eng
                         </button>
                     </div>
@@ -91,7 +91,7 @@
                                 назад
                         </button>
                         <div class="langs-right">
-                            <button class="btn sm-btn margin-right">
+                            <button class="btn sm-btn margin-right active">
                                 ru
                             </button>
                             <button class="btn sm-btn margin-right">
@@ -142,7 +142,7 @@
                             <button class="btn sm-btn margin-right">
                                 ru
                             </button>
-                            <button class="btn sm-btn margin-right">
+                            <button class="btn sm-btn margin-right active">
                                 tat
                             </button>
                             <button class="btn sm-btn margin-right">
@@ -193,7 +193,7 @@
                             <button class="btn sm-btn margin-right">
                                 tat
                             </button>
-                            <button class="btn sm-btn margin-right">
+                            <button class="btn sm-btn margin-right active">
                                 eng
                             </button>
                         </div>
@@ -240,7 +240,7 @@
                             </button>
                         </div>
                         <div class="langs-right">
-                            <button class="btn sm-btn margin-right">
+                            <button class="btn sm-btn margin-right active">
                                 ru
                             </button>
                             <button class="btn sm-btn margin-right">
@@ -307,7 +307,7 @@
                             <button class="btn sm-btn margin-right">
                                 ru
                             </button>
-                            <button class="btn sm-btn margin-right">
+                            <button class="btn sm-btn margin-right active">
                                 tat
                             </button>
                             <button class="btn sm-btn margin-right">
@@ -374,7 +374,7 @@
                             <button class="btn sm-btn margin-right">
                                 tat
                             </button>
-                            <button class="btn sm-btn margin-right">
+                            <button class="btn sm-btn margin-right active">
                                 eng
                             </button>
                         </div>
@@ -435,7 +435,7 @@
                             </button>
                         </div>
                         <div class="langs-right">
-                            <button class="btn sm-btn margin-right">
+                            <button class="btn sm-btn margin-right active">
                                 ru
                             </button>
                             <button class="btn sm-btn margin-right">
@@ -502,7 +502,7 @@
                             <button class="btn sm-btn margin-right">
                                 ru
                             </button>
-                            <button class="btn sm-btn margin-right">
+                            <button class="btn sm-btn margin-right active">
                                 tat
                             </button>
                             <button class="btn sm-btn margin-right">
@@ -569,7 +569,7 @@
                             <button class="btn sm-btn margin-right">
                                 tat
                             </button>
-                            <button class="btn sm-btn margin-right">
+                            <button class="btn sm-btn margin-right active">
                                 eng
                             </button>
                         </div>
@@ -630,7 +630,7 @@
                             </button>
                         </div>
                         <div class="langs-right">
-                            <button class="btn sm-btn margin-right">
+                            <button class="btn sm-btn margin-right active">
                                 ru
                             </button>
                             <button class="btn sm-btn margin-right">
@@ -697,7 +697,7 @@
                             <button class="btn sm-btn margin-right">
                                 ru
                             </button>
-                            <button class="btn sm-btn margin-right">
+                            <button class="btn sm-btn margin-right active">
                                 tat
                             </button>
                             <button class="btn sm-btn margin-right">
@@ -764,7 +764,7 @@
                             <button class="btn sm-btn margin-right">
                                 tat
                             </button>
-                            <button class="btn sm-btn margin-right">
+                            <button class="btn sm-btn margin-right active">
                                 eng
                             </button>
                         </div>
@@ -825,7 +825,7 @@
                             </button>
                         </div>
                         <div class="langs-right">
-                            <button class="btn sm-btn margin-right">
+                            <button class="btn sm-btn margin-right active">
                                 ru
                             </button>
                             <button class="btn sm-btn margin-right">
@@ -892,7 +892,7 @@
                             <button class="btn sm-btn margin-right">
                                 ru
                             </button>
-                            <button class="btn sm-btn margin-right">
+                            <button class="btn sm-btn margin-right active">
                                 tat
                             </button>
                             <button class="btn sm-btn margin-right">
@@ -959,7 +959,7 @@
                             <button class="btn sm-btn margin-right">
                                 tat
                             </button>
-                            <button class="btn sm-btn margin-right">
+                            <button class="btn sm-btn margin-right active">
                                 eng
                             </button>
                         </div>
