--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
         <div class="sections" id="animatedSections">
             <div class="modal-content">
                 <div class="sections__fn-btns">
-                    <button class="close-animatedSections back-btn btn bg-btn margin-left" lng="back_btn">
-                        назад
-                    </button>
-                    <div class="langs-right">
+                    <div class="sections__back-btn">
+                        <button class="close-animatedSections back-btn btn bg-btn margin-left" lng="back_btn">
+                            назад
+                        </button>
+                    </div>
+                    <div class="sections__langs-right langs-right">
                         <button class="btn sm-btn margin-right rus">
                             ru
                         </button>
@@ -92,7 +94,7 @@
             <div class="modal-content">
                 <div class="btns-wrap">
                     <div class="section-btn-wrap">
-                        <button class="close-animatedSection1 section-btn btn bg-btn" lng="back_btn">
+                        <button class="close-animatedSection1 section-1__btn-back section-btn btn bg-btn" lng="back_btn">
                             назад
                         </button>
                     </div>
@@ -157,7 +159,7 @@
             <div class="modal-content">
                 <div class="btns-wrap">
                     <div class="section-btn-wrap">
-                        <button class="close-animatedSection2 section-btn btn bg-btn" lng="back_btn">
+                        <button class="close-animatedSection2 section-2__btn-back section-btn btn bg-btn" lng="back_btn">
                             назад
                         </button>
                     </div>
@@ -222,7 +224,7 @@
             <div class="modal-content">
                 <div class="btns-wrap">
                     <div class="section-btn-wrap">
-                        <button class="close-animatedSection3 section-btn btn bg-btn" lng="back_btn">
+                        <button class="close-animatedSection3 section-3__btn-back section-btn btn bg-btn" lng="back_btn">
                             назад
                         </button>
                     </div>
@@ -287,7 +289,7 @@
             <div class="modal-content">
                 <div class="btns-wrap">
                     <div class="section-btn-wrap">
-                        <button class="close-animatedSection4 section-btn btn bg-btn" lng="back_btn">
+                        <button class="close-animatedSection4 section-4__btn-back section-btn btn bg-btn" lng="back_btn">
                             назад
                         </button>
                     </div>
